--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,11 @@ nb-configuration.xml
 ## Miscellaneous
 ##############################
 *.log
+
+##############################
+## Environment Variables
+##############################
+.env
+.env.local
+.env.*.local
+.env.test
