--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=maze_rush
 server.port=8080
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/maze_rush}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:yourpassword}
+spring.datasource.username=${DATABASE_USERNAME:admin}
+spring.datasource.password=${DATABASE_PASSWORD:admin123}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
