--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -27,6 +27,22 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
+    
+    services:
+      postgres:
+        image: postgres:15
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_DB: maze_rush
+          POSTGRES_USER: admin
+          POSTGRES_PASSWORD: admin123
+        options: >-
+          --health-cmd="pg_isready -U admin"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+    
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -37,3 +53,7 @@ jobs:
           cache: maven
       - name: Run tests (verify phase)
         run: mvn verify
+        env:
+          DATABASE_URL: jdbc:postgresql://localhost:5432/maze_rush
+          DATABASE_USERNAME: admin
+          DATABASE_PASSWORD: admin123
