--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
             <scope>runtime</scope>
         </dependency>
         
+        <!-- SpringDoc OpenAPI 3 for Spring Boot 3.x with Swagger UI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.13</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
