--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,19 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# JWT Configuration - Use a secure key of at least 64 bytes (512 bits) for HS512
+app.jwt.secret=${JWT_SECRET:YourVerySecretKeyThatIsAtLeast64BytesLongForHS512}
+app.jwt.access-token-expiration=3600
+app.jwt.refresh-token-expiration=86400
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.displayRequestDuration=true
+springdoc.swagger-ui.showExtensions=true
+springdoc.swagger-ui.docExpansion=none
+springdoc.show-actuator=false
