--- a/.github/workflows/main_themaze.yml
+++ b/.github/workflows/main_themaze.yml
@@ -15,6 +15,11 @@ jobs:
     permissions:
       contents: read #This is required for actions/checkout
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+      DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v4
 
