--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
         <license/>
     </licenses>
     <developers>
-        <developer/>
     </developers>
     <scm>
         <connection/>
@@ -75,6 +74,22 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!-- OAuth2 Client para autenticación con Google -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+        <!-- Google API Client para validar tokens de Google -->
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auth</groupId>
+            <artifactId>google-auth-library-oauth2-http</artifactId>
+            <version>1.34.0</version>
         </dependency>
         <!-- JWT support -->
         <dependency>
