--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,5 +10,14 @@ app.jwt.secret=${JWT_SECRET:ThisIsASuperSecureJWTSecretKeyForHS512ThatIsDefinite
 app.jwt.access-token-expiration=3600
 app.jwt.refresh-token-expiration=86400
 
+# Frontend URL for OAuth2 redirects
+app.frontend.url=${FRONTEND_URL:https://yourdomain.com}
+
+# OAuth2 Google Configuration
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
 app.domain.front=${FRONT_DOMAIN:*}
 
