feat: Add WebSocket support for real-time lobby interactions
- Added spring-boot-starter-websocket dependency to pom.xml
- Implemented WebSocket configuration in WebSocketConfig.java
- Created LobbyWebSocketController.java to handle chat messages and player states
- Developed DTOs for chat messages and player events
- Established entity relationships for Lobby and LobbyPlayer
- Implemented LobbyService methods for lobby creation, joining, and player management
- Enhanced security configuration to permit WebSocket endpoints

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         
+        <!-- WebSocket support for STOMP messaging -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        
     </dependencies>
 
     <build>
