Feat: Adding support for Google OAuth2 authentication and environment variable configuration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,26 @@
-DATABASE_URL=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
+# ==============================================
+# Maze Rush Backend - Environment Variables
+# ==============================================
+# Copia este archivo como .env y configura los valores apropiados
+
+# Database Configuration
+DATABASE_URL=jdbc:postgresql://localhost:5432/maze_rush
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=your_password_here
+
+# Google OAuth2 Configuration
+# Obtén estas credenciales desde Google Cloud Console: https://console.cloud.google.com/
+# 1. Crea un proyecto o selecciona uno existente
+# 2. Ve a "APIs & Services" > "Credentials"
+# 3. Crea credenciales de tipo "OAuth 2.0 Client ID"
+# 4. Configura los URIs de redirección autorizados
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# JWT Configuration (Optional - usa valores por defecto si no se especifica)
+JWT_SECRET=your-jwt-secret-key-change-in-production
+JWT_EXPIRATION=3600000
+
+# Redis Configuration (Optional - para cache)
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
