relaease: prepare test main

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/maze_rush}
 spring.datasource.username=${DATABASE_USERNAME:admin}
 spring.datasource.password=${DATABASE_PASSWORD:admin123}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 
 # JWT Configuration - Use a secure key of at least 64 bytes (512 bits) for HS512
