--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ springdoc.swagger-ui.docExpansion=none
 springdoc.show-actuator=false
 
 # Redis Configuration
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.host=redis-11631.c266.us-east-1-3.ec2.cloud.redislabs.com
+spring.data.redis.port=11631
+spring.data.redis.password=mVgJzDVmVCnBJ74tMhQPw7QQTbbzqDdu
 spring.data.redis.timeout=6000
