refactor: eliminar referencia a self en OAuth2ServiceImpl y ajustar pruebas

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,5 +19,11 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
-app.domain.front=${FRONT_DOMAIN:*}
+app.domain.front=${FRONT_DOMAIN:https://maze-rush-frontend.vercel.app}
 
+# Cookie domain configuration (leave empty for Railway automatic domain)
+app.cookie.domain=${COOKIE_DOMAIN:}
+
+# Logging for debugging OAuth2 (remove in stable production)
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
