Changes on CI/CD

--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -67,6 +67,6 @@ jobs:
     needs: test 
     uses: ./.github/workflows/sonar-scan.yml
     with:
-      project_key: "Maze-Rush-Backend" 
+      project_key: "la-ley-del-corazon_maze-rush" 
     secrets:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
